tests/nullable/nullable.exp
Error: error.js:8
  8: ((any: ?number): number);
            ^^^^^^^ null or undefined. This type is incompatible with
  8: ((any: ?number): number);
                      ^^^^^^ number

Error: error.js:9
  9: ((any: ?number): null);
            ^^^^^^^ null or undefined. This type is incompatible with
  9: ((any: ?number): null);
                      ^^^^ null

Error: error.js:9
  9: ((any: ?number): null);
             ^^^^^^ number. This type is incompatible with
  9: ((any: ?number): null);
                      ^^^^ null

Error: error.js:10
 10: ((any: ?number): void);
            ^^^^^^^ null or undefined. This type is incompatible with
 10: ((any: ?number): void);
                      ^^^^ undefined

Error: error.js:10
 10: ((any: ?number): void);
             ^^^^^^ number. This type is incompatible with
 10: ((any: ?number): void);
                      ^^^^ undefined

Error: error.js:16
 16: ((any: ?number): number | null);
            ^^^^^^^ null or undefined. This type is incompatible with
 16: ((any: ?number): number | null);
                      ^^^^^^^^^^^^^ union: number | null
  Member 1:
   16: ((any: ?number): number | null);
                        ^^^^^^ number
  Error:
   16: ((any: ?number): number | null);
              ^^^^^^^ null or undefined. This type is incompatible with
   16: ((any: ?number): number | null);
                        ^^^^^^ number
  Member 2:
   16: ((any: ?number): number | null);
                                 ^^^^ null
  Error:
   16: ((any: ?number): number | null);
              ^^^^^^^ null or undefined. This type is incompatible with
   16: ((any: ?number): number | null);
                                 ^^^^ null

Error: error.js:17
 17: ((any: ?number): number | void);
            ^^^^^^^ null or undefined. This type is incompatible with
 17: ((any: ?number): number | void);
                      ^^^^^^^^^^^^^ union: number | undefined
  Member 1:
   17: ((any: ?number): number | void);
                        ^^^^^^ number
  Error:
   17: ((any: ?number): number | void);
              ^^^^^^^ null or undefined. This type is incompatible with
   17: ((any: ?number): number | void);
                        ^^^^^^ number
  Member 2:
   17: ((any: ?number): number | void);
                                 ^^^^ undefined
  Error:
   17: ((any: ?number): number | void);
              ^^^^^^^ null or undefined. This type is incompatible with
   17: ((any: ?number): number | void);
                                 ^^^^ undefined

Error: maybe.js:5
  5: ((123: ?(?number)): ?string); // error (only num ~> string)
               ^^^^^^ number. This type is incompatible with
  5: ((123: ?(?number)): ?string); // error (only num ~> string)
                          ^^^^^^ string

Error: nullable.js:1
  1: function foo():string { return null; }
                                    ^^^^ null. This type is incompatible with the expected return type of
  1: function foo():string { return null; }
                    ^^^^^^ string

Error: nullable.js:11
 11: if (x != null) corge(x); // x: ?string | null
                          ^ string. This type is incompatible with the expected param type of
  7: function corge(x:number) { }
                      ^^^^^^ number

Error: nullable.js:15
 15:   grault(); qux(x);
                     ^ null. This type is incompatible with the expected param type of
  5: function qux(x:string) { }
                    ^^^^^^ string

Error: nullable.js:15
 15:   grault(); qux(x);
                     ^ null or undefined. This type is incompatible with the expected param type of
  5: function qux(x:string) { }
                    ^^^^^^ string

Error: simple_nullable.js:4
  4: bar('hmm');
         ^^^^^ string. This type is incompatible with the expected param type of
  2: function bar(x:?number) {}
                     ^^^^^^ number


Found 13 errors
